# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-06-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for cloudi_service_oauth1 to match HTTP input
    * Fixes to cloudi_service_http_cowboy and cloudi_service_http_elli to
      keep their functionality similar and to use the output 'internal'
      for GET query strings that are passed as a tuple list
      (instead of the 'external' text encoding with \0 delimiters format)

2014-06-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix application membership of CloudI internal services by having
      the group_leader set properly

2014-06-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add request_start and request_end to cloudi_service_oauth1

2014-06-25 Irina Guberman

    * Update cloudi_service_db_cassandra_cql

2014-06-23 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_db_oauth1
    * Add cloudi_service_db_riak

2014-06-23 Irina Guberman

    * Add cloudi_service_db_cassandra_cql

2014-06-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix {<<"connection">>, <<"close">>} RequestInfo/ResponseInfo usage in
      cloudi_service_http_cowboy so all websocket usage works as expected

2014-06-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add websocket_output configuration argument to
      cloudi_service_http_cowboy

2014-06-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes for closing a connection in the response of a websocket_connect
      in cloudi_service_http_cowboy
    * Fixes for using hidden nodes
    * Fix the python CloudI API cloudi_c.mcast_async return for no destinations
    * Update cpg

2014-06-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the service request response to a websocket connection close

2014-05-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.2 (beta) released