@@ -1,0 +1,12 @@
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
+
+{lib_dirs,
+ ["..",
+  "../../external"]}.
+{clean_files, ["test_ct/*.beam"]}.
+{ct_dir, "test_ct"}.
+{ct_log_dir, "test_ct/logs"}.
+{ct_extra_params, "-test"}.
+{ct_use_short_names, true}.
+
