@@ -1,6 +1,9 @@
 %-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et:
 
+{lib_dirs,
+ ["lib",
+  "external"]}.
 {sub_dirs,
  ["lib/cloudi_core",
   "lib/cloudi_service_api_requests",
