@@ -1,6 +1,12 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-06-30 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Fix bug with cloudi_service_init/3 callback function exceptions
+      causing a possible crash of cloudi_service_monitor
+    * Add the beginning of cloudi_core CT tests
+
 2014-06-27 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fixes for cloudi_service_oauth1 to match HTTP input
